@@ -1,5 +1,16 @@
 2011-05-10  Ivan Maidanski  <ivmai@mail.ru>
 
+	* pthread_support.c (GC_unregister_my_thread): Call pthread_self
+	only once.
+	* win32_threads.c (GC_pthread_start_inner): Ditto.
+	* pthread_support.c (GC_unregister_my_thread): Add debug output.
+	* win32_threads.c (GC_unregister_my_thread): Ditto.
+	* pthread_support.c (GC_register_my_thread,
+	GC_start_rtn_prepare_thread): Rename "my_pthread" local variable
+	to "self".
+
+2011-05-10  Ivan Maidanski  <ivmai@mail.ru>
+
 	* include/gc.h (GC_HIDE_POINTER, GC_REVEAL_POINTER): Define
 	unconditionally (do not test GC_I_HIDE_POINTERS); update the
 	comment.
